@@ -7,6 +7,8 @@ use File::Path qw(make_path);
 use File::Spec;
 use IO::Select;
 use IO::Socket; # INET or UNIX, depending on user's choice
+#use Sys::Hostname;   # not mandatory but recommended
+#use Term::ANSIColor; # not mandatory but recommended: fallback to no color
 
 use lib '/usr/share/schedule';
 use FindBin;
@@ -17,7 +19,7 @@ if(defined($FindBin::Bin) && ($FindBin::Bin ne '')) {
 }
 use Schedule::Helpers qw(/./);
 use Schedule::Connect;
-my $s = Schedule::Connect->new('schedule-server', '0.10');
+my $s = Schedule::Connect->new('schedule-server', '0.11');
 
 =head1 NAME
 
@@ -162,6 +164,15 @@ Drop permissions to user with id I<uid> instead of 65534.
 
 Drop permissions to user with id I<gid> instead of 65534.
 (If this is specified and valid the value of B<--group> is ignored.)
+
+=item B<--color> or B<-F>
+
+Try to color even if output is not a terminal.
+
+=item B<--no-color> or B<--nocolor> or B<-p>
+
+Do not color the output.
+Setting the environment variable B<ANSI_COLORS_DISABLED> has the same effect.
 
 =item B<--help> or B<-h>
 
